# Simple-Music-Editor

./: CONTRIBUTING.md  Créditos.txt  README.md
doxygen/: Doxyfile
iapg_project/: CMakeLists.txt  Doxyfile.dox  artistas.txt  funcoes.c  funcoes.h  lrc_func.c  main.c  menu_add.c  menu_add.h  menu_album.c  menu_artist.c  menu_artist.h  menu_edit.c  menu_edit.h  menu_edit_remove.c  menu_er.c  menu_music.c  menu_music.h  menu_pr.c  menu_pr.h  menu_remove.c  menu_remove.h  menu_search.c  menu_search.h  menu_year.c  musicas.txt  project.h  temp.c  temp.txt
iapg_project/doxygen/html/: _doxyfile_8dox.html  annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  lrc__func_8c.html  main_8c.html  menu__album_8c.html  menu__artist_8c.html  menu__edit__remove_8c.html  menu__music_8c.html  menu__pr_8c.html  menu__search_8c.html  menu__year_8c.html  menudata.js  project_8h.html  project_8h_source.html  structartista.html  structlrc.html  structmusica.html  temp_8c.html
iapg_project/doxygen/latex/: _doxyfile_8dox.tex  annotated.tex  files.tex  lrc__func_8c.tex  main_8c.tex  menu__album_8c.tex  menu__artist_8c.tex  menu__edit__remove_8c.tex  menu__music_8c.tex  menu__pr_8c.tex  menu__search_8c.tex  menu__year_8c.tex  project_8h.tex  refman.tex  structartista.tex  structlrc.tex  structmusica.tex  temp_8c.tex
iapg_project/musicas/: Adele - Rolling In The Deep.lrc  Bon Jovi - Always.lrc  Ed Sheeran - Photograph.lrc  U2 - Beautiful day.lrc
(+43 files in other folders)
